--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <clear />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="xunit.vsix" value="https://nugets.blob.core.windows.net/xunit/index.json" />
+    <add key="xvssdk" value="https://nugets.blob.core.windows.net/xvssdk/index.json" />
+    <add key="merq" value="https://nugetized.blob.core.windows.net/merq/index.json" />
     <add key="Xamarin.CodeFormatter" value="https://nugetized.blob.core.windows.net/codeformatter/index.json" />
+    <add key="local" value="%TEMP%\packages" />
   </packageSources>
+  <disabledPackageSources>
+    <clear />
+  </disabledPackageSources>
 </configuration>
