Convert integration tests to VsixTesting.Xunit

--- a/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
+++ b/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
@@ -32,5 +32,6 @@
     <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj" />
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
     <ProjectReference Include="..\Clide\Clide.csproj" />
+    <ProjectReference Include="..\Clide.Vsix\Clide.Vsix.csproj" ReferenceOutputAssembly="false" AdditionalProperties="CreateVsixContainer=true" />
   </ItemGroup>
 </Project>
