Added IProjectNode -> IVsBuildPropertyStorage adapter
Supporting also the case where the ProjectNode was adapted from a
flavored project where the InnerVsHierarchy should be used
to cast the IVsHierarchy to IVsBuildPropertyStorage

--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -11,6 +11,8 @@
     <IsProductComponent>true</IsProductComponent>
     <BypassVsixValidation Condition="'$(CI)' == 'true'">true</BypassVsixValidation>
 
+    <CreateVsixContainer>true</CreateVsixContainer>
+    
     <Experimental>true</Experimental>
     <Experimental Condition="'$(CI)' == 'true'">false</Experimental>
     <SystemComponent>false</SystemComponent>
