[WIP] Added a simplified and optimized version of TemplateEngineWizard for multi-project templates
We have seen some significant improvements on solution perf load by invoking dotnet new directly when
unfolding multi projects templates and adding the generated .csproj using the IVsSolution API.

In some cases, the solution load time was 50% faster comparing with using the
`"Microsoft.VisualStudio.TemplateEngine.Wizard.TemplateEngineWizard`.

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -19,6 +19,7 @@
 
   <ItemGroup Condition="'$(IncludeVSSDK)' == 'true'">
     <PackageReference Include="Xamarin.VSSDK" Version="$(XVSSDKVersion)" />
+    <PackageReference Include="VSSDK.TemplateWizardInterface" Version="12.0.4" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(IncludeRx)' == 'true'">
