Fix CI build dependencies
Build against a fixed version of the XVSSDK in CI, instead of a floating
version, since that can introduce unwanted dependency changes when building the
same commit (or a later one). The version specified is the one we shipped with
16.0.

Also, don't append branch name for v* branches (they are release branches). This
simplifies the nuget package build metadata, no actual versioning change.

--- a/src/Version.targets
+++ b/src/Version.targets
@@ -52,7 +52,7 @@
       <_GitBranch Condition="'$(_IndexOfBranchSlash)' == '0'">$(GitBranch)</_GitBranch>
 
       <!-- We'll use GitFlow and ship publicly from master, meaning we don't need branch metadata from there -->
-      <GitSemVerDashLabel Condition="'$(GitSemVerDashLabel)' == '' and '$(_GitBranch)' != 'master'">-$(_GitBranch)</GitSemVerDashLabel>
+      <GitSemVerDashLabel Condition="'$(GitSemVerDashLabel)' == '' and '$(_GitBranch)' != 'master' and '$(_GitBranch.StartsWith(v))' != 'true'">-$(_GitBranch)</GitSemVerDashLabel>
       <SemVerMetadata Condition="'$(GitSemVerDashLabel)' != '-$(_GitBranch)' and '$(_GitBranch)' != 'master'">$(_GitBranch).</SemVerMetadata>
       <SemVerMetadata>$(SemVerMetadata)sha.$(GitCommit)</SemVerMetadata>
 
