--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -54,7 +54,8 @@
     <XunitVersion>2.3.1</XunitVersion>
 
     <XunitVsixVersion>0.4.0-alpha.*</XunitVsixVersion>
-    <XVSSDKVersion>0.4.0-alpha.*</XVSSDKVersion>
+    <XVSSDKVersion Condition="'$(CI)' != 'true'">0.4.0-alpha.*</XVSSDKVersion>
+    <XVSSDKVersion Condition="'$(CI)' == 'true'">0.4.0-alpha.4</XVSSDKVersion>
     <XVSSDKBuildToolsVersion Condition="'$(CI)' != 'true'">0.4.0-alpha.*</XVSSDKBuildToolsVersion>
     <XVSSDKBuildToolsVersion Condition="'$(CI)' == 'true'">0.4.0-alpha.4</XVSSDKBuildToolsVersion>
 
