--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -54,9 +54,10 @@
     <XunitVersion>2.3.1</XunitVersion>
 
     <XunitVsixVersion>0.4.0-alpha.*</XunitVsixVersion>
-    <XVSSDKVersion>0.4.0-alpha.*</XVSSDKVersion>
+    <XVSSDKVersion Condition="'$(CI)' != 'true'">0.4.0-alpha.*</XVSSDKVersion>
+    <XVSSDKVersion Condition="'$(CI)' == 'true'">0.4.0-alpha.9</XVSSDKVersion>
     <XVSSDKBuildToolsVersion Condition="'$(CI)' != 'true'">0.4.0-alpha.*</XVSSDKBuildToolsVersion>
-    <XVSSDKBuildToolsVersion Condition="'$(CI)' == 'true'">0.4.0-alpha.4</XVSSDKBuildToolsVersion>
+    <XVSSDKBuildToolsVersion Condition="'$(CI)' == 'true'">0.4.0-alpha.9</XVSSDKBuildToolsVersion>
 
     <VSSDKBuildToolsVersion>15.7.109</VSSDKBuildToolsVersion>
 
