Limit minimum VS version to current in Debug builds
When building in debug mode, we use the current VS version to limit the target VS and max/min versions, so that tests only run against the current VS version. We also disable recycling since in debug builds, we'll most likely want to see tests fail once and fix them.

--- a/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
+++ b/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
@@ -5,8 +5,7 @@
     <IncludeIntegrationTests>true</IncludeIntegrationTests>
     <EnableDefaultItems>false</EnableDefaultItems>
     <AddSyntheticProjectReferencesForSolutionDependencies>false</AddSyntheticProjectReferencesForSolutionDependencies>
-    <TimeoutSeconds>120</TimeoutSeconds>
-    <RecycleOnFailure>true</RecycleOnFailure>
+    <GenerateAssemblyVsixAttribute>false</GenerateAssemblyVsixAttribute>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <CodeAnalysisRuleSet>Clide.IntegrationTests.ruleset</CodeAnalysisRuleSet>
@@ -32,5 +31,11 @@
     <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj" />
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
     <ProjectReference Include="..\Clide\Clide.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
+      <_Parameter1>VisualStudioVersion</_Parameter1>
+      <_Parameter2>$(VisualStudioVersion)</_Parameter2>
+    </AssemblyAttribute>
   </ItemGroup>
 </Project>
