--- a/src/Clide.Vsix/Properties/launchSettings.json
+++ b/src/Clide.Vsix/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Clide.Vsix": {
       "commandName": "Executable",
       "executablePath": "$(VsInstallRoot)\\Common7\\IDE\\devenv.exe",
-      "commandLineArgs": "/rootSuffix $(VSSDKTargetPlatformRegRootSuffix)",
+      "commandLineArgs": "/rootSuffix $(VSSDKTargetPlatformRegRootSuffix) /log",
       "environmentVariables": {
         "xunit.vsix.debug": "false"
       }
