Add feature flag to disable the automatic binlog collection
Just in case anything breaks when we do this with `/log`, allow disabling
this via a feature flag as well as Preview Features UI in preview builds.

--- a/src/Clide.UnitTests/Clide.UnitTests.csproj
+++ b/src/Clide.UnitTests/Clide.UnitTests.csproj
@@ -5,6 +5,10 @@
     <IncludeVSSDK>true</IncludeVSSDK>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\Clide\Interop\IVsFeatureFlags.cs" Link="Interop\IVsFeatureFlags.cs" />
+    <Compile Include="..\Clide\Interop\SVsFeatureFlags.cs" Link="Interop\SVsFeatureFlags.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.CSharp" />
@@ -14,5 +18,8 @@
     <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj" />
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
     <ProjectReference Include="..\Clide\Clide.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interop\" />
   </ItemGroup>
 </Project>
