--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -35,6 +35,8 @@
   <ItemGroup>
     <None Include="source.extension.vsixmanifest" />
     <PackageFile Include="build\*.*" Kind="Build" />
+    <None Remove="FeatureFlags.pkgdef" />
+    <Content Include="FeatureFlags.pkgdef" IncludeInVSIX="true" CopyToOutputDirectory="PreserveNewest" />
     <PackageFile Include="MSBuilder.VsixInstaller" Version="1.0.4" Kind="Dependency" Visible="false" />
     <BindingRedirect Include="Clide" From="3.0.0.0" />
   </ItemGroup>
