--- a/src/Clide.Extensibility/Clide.Extensibility.csproj
+++ b/src/Clide.Extensibility/Clide.Extensibility.csproj
@@ -15,6 +15,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
+    <ProjectReference Include="..\Clide.Windows\Clide.Windows.csproj" />
   </ItemGroup>
   
 </Project>
