--- a/src/Clide/Clide.csproj
+++ b/src/Clide/Clide.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
     <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj" />
+    <ProjectReference Include="..\Clide.Windows\Clide.Windows.csproj" />
   </ItemGroup>
 
   <ItemGroup>
