--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -55,6 +55,8 @@
     <NuGetizerVersion>0.2.2</NuGetizerVersion>
     <XunitVersion>2.3.1</XunitVersion>
 
+	<VisualStudioThreadingVersion>15.8.132</VisualStudioThreadingVersion>
+	
     <XunitVsixVersion>0.4.0-alpha.*</XunitVsixVersion>
     <XVSSDKVersion Condition="'$(CI)' != 'true'">0.4.0-alpha.*</XVSSDKVersion>
     <XVSSDKVersion Condition="'$(CI)' == 'true'">0.4.0-alpha.9</XVSSDKVersion>
