Improve and simplify packaging
Inference works quite well in nugetizer, so leverage it.
This cleans a bunch of custom stuff we had, and also allows
cleaning dependencies by just adding Pack=false to PackageReferences.

Move common package metadata to Directory.Build.props,
and stop packing from VSIX project

--- a/src/Clide.Interfaces/Clide.Interfaces.csproj
+++ b/src/Clide.Interfaces/Clide.Interfaces.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net46</TargetFramework>
     <IncludeAnalyzers>true</IncludeAnalyzers>
 
-    <PackageId>Clide.Interfaces</PackageId>
-    <IsPackable>false</IsPackable>
+    <PackageId>Clide</PackageId>
+    <Description>Clide</Description>
     <IncludePack>true</IncludePack>
     <InferPackageContents>false</InferPackageContents>
 
@@ -14,10 +14,10 @@
 
   <ItemGroup>
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="WindowsBase" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
 
   <ItemGroup>
