--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -5,6 +5,7 @@
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="xunit.vsix" value="https://nugets.blob.core.windows.net/xunit/index.json" />
     <add key="xvssdk" value="https://nugets.blob.core.windows.net/xvssdk/index.json" />
+    <add key="nugetizer" value="https://ci.appveyor.com/nuget/nugetizer3000" />
   </packageSources>
   <disabledPackageSources>
     <clear />
