--- a/tfs.yml
+++ b/tfs.yml
@@ -1,40 +1,42 @@
-queue: Hosted VS2017
+jobs:
+- job: Windows
+  pool:
+    vmImage: 'windows-2019'
+    steps:
 
-steps:
+    - checkout: self
+      clean: true
 
-- checkout: self
-  clean: true
+    - task: MSBuild@1
+      displayName: Restore
+      inputs:
+        solution: build.proj
+        msbuildArguments: /t:Restore /bl:"$(Build.ArtifactStagingDirectory)\restore.binlog"
 
-- task: MSBuild@1
-  displayName: Restore
-  inputs:
-    solution: build.proj
-    msbuildArguments: /t:Restore /p:Dev=14.0 /bl:"$(Build.ArtifactStagingDirectory)\restore.binlog"
+    - task: MSBuild@1
+      displayName: Build
+      inputs:
+        solution: build.proj
+        msbuildArguments: /t:Build /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)" /bl:"$(Build.ArtifactStagingDirectory)\build.binlog"
 
-- task: MSBuild@1
-  displayName: Build
-  inputs:
-    solution: build.proj
-    msbuildArguments: /t:Build /p:Dev=14.0 /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)" /bl:"$(Build.ArtifactStagingDirectory)\build.binlog"
+    - task: VSTest@2
+      displayName: Test
+      inputs:
+        testAssemblyVer2: src\*\bin\**\*.UnitTests.dll
+        runInParallel: 'true'
+        codeCoverageEnabled: 'true'
+        publishRunAttachments: 'true'
 
-- task: VSTest@2
-  displayName: Test
-  inputs:
-    testAssemblyVer2: src\Clide.UnitTests\bin\*\net461\Clide.UnitTests.dll
-    runInParallel: 'true'
-    codeCoverageEnabled: 'true'
-    publishRunAttachments: 'true'
+    - task: MSBuild@1
+      displayName: Push
+      inputs:
+        solution: build.proj
+        msbuildArguments: /t:Push /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)" /p:StorageAccessKey=$(StorageAccessKey) /bl:"$(Build.ArtifactStagingDirectory)\push.binlog"
 
-- task: MSBuild@1
-  displayName: Push
-  inputs:
-    solution: build.proj
-    msbuildArguments: /t:Package,Push /p:Dev=14.0 /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)" /p:StorageAccessKey=$(StorageAccessKey) /bl:"$(Build.ArtifactStagingDirectory)\push.binlog"
-
-- task: PublishBuildArtifacts@1
-  displayName: Publish Artifact
-  condition: always()
-  inputs:
-    PathtoPublish: $(Build.ArtifactStagingDirectory)
-    ArtifactName: output
-    ArtifactType: Container
+    - task: PublishBuildArtifacts@1
+      displayName: Publish Artifact
+      condition: always()
+      inputs:
+        PathtoPublish: $(Build.ArtifactStagingDirectory)
+        ArtifactName: output
+        ArtifactType: Container
