Move Clide build targets to Clide.Windows
This allows consumers to properly exclude Clide assemblies from their
VSIXes, but also to access the actual VSIX in case installation is
needed

--- a/src/Clide.Windows/Clide.Windows.csproj
+++ b/src/Clide.Windows/Clide.Windows.csproj
@@ -40,5 +40,10 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  
+
+  <ItemGroup>
+    <PackageFile Include="..\Clide.Vsix\bin\$(Configuration)\*.vsix" PackagePath="tools\%(Filename)%(Extension)" />
+    <PackageFile Include="build\*.*" Kind="Build" />
+  </ItemGroup>
+
 </Project>
