Added build targets and vsix also to Clide.Mac

--- a/src/Clide.Mac/Clide.Mac.csproj
+++ b/src/Clide.Mac/Clide.Mac.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageFile Include="..\Clide.Vsix\bin\$(Configuration)\*.vsix" PackagePath="tools\%(Filename)%(Extension)" />
+    <PackageFile Include="build\*.*" Kind="Build" />
+  </ItemGroup>
+
 </Project>
