Update to location of VSIX in CI

--- a/src/Clide.Windows/Clide.Windows.csproj
+++ b/src/Clide.Windows/Clide.Windows.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageFile Include="..\Clide.Vsix\bin\$(Configuration)\*.vsix" PackagePath="tools\%(Filename)%(Extension)" />
+    <PackageFile Include="$(PackageOutputPath)\*.vsix" PackagePath="tools\%(Filename)%(Extension)" />
     <PackageFile Include="build\*.*" Kind="Build" />
   </ItemGroup>
 
