--- a/src/Clide.Mac/Clide.Mac.csproj
+++ b/src/Clide.Mac/Clide.Mac.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageFile Include="..\Clide.Vsix\bin\$(Configuration)\*.vsix" PackagePath="tools\%(Filename)%(Extension)" />
+    <PackageFile Include="$(PackageOutputPath)\*.vsix" PackagePath="tools\%(Filename)%(Extension)" />
     <PackageFile Include="build\*.*" Kind="Build" />
   </ItemGroup>
 
