--- a/src/Clide.Windows/Clide.Windows.csproj
+++ b/src/Clide.Windows/Clide.Windows.csproj
@@ -6,6 +6,7 @@
     <IncludePack>true</IncludePack>
     <IncludeAnalyzers>true</IncludeAnalyzers>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <TargetOS>Windows_NT</TargetOS>
 
     <PackageId>Clide.Windows</PackageId>
     <Description>Clide.Windows</Description>
