--- a/src/Clide.Core.Windows/Clide.Core.Windows.csproj
+++ b/src/Clide.Core.Windows/Clide.Core.Windows.csproj
@@ -7,6 +7,7 @@
     <IncludeAnalyzers>true</IncludeAnalyzers>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <IsPackable>false</IsPackable>
+    <TargetOS>Windows_NT</TargetOS>
   </PropertyGroup>
 
   <ItemGroup>
