--- a/src/Clide.Mac/Clide.Mac.csproj
+++ b/src/Clide.Mac/Clide.Mac.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net472</TargetFramework>
     <IncludePack>true</IncludePack>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <TargetOS>Unix</TargetOS>
 
     <PackageId>Clide.Mac</PackageId>
     <Description>Clide.Mac</Description>
