Add yml build definition, relocate solution and remove old proj
The new Directory.Solution.targets extension point would eventually allow us to also provision additional dependencies needed after restoring the main solution from command line.

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -6,7 +6,7 @@
     <add key="xunit.vsix" value="https://nugets.blob.core.windows.net/xunit/index.json" />
     <add key="xvssdk" value="https://nugets.blob.core.windows.net/xvssdk/index.json" />
     <add key="merq" value="https://nugetized.blob.core.windows.net/merq/index.json" />
-    <add key="Xamarin.CodeFormatter" value="https://nugetized.blob.core.windows.net/codeformatter/index.json" />
+    <add key="nugetizer" value="https://ci.appveyor.com/nuget/nugetizer3000" />
   </packageSources>
   <disabledPackageSources>
     <clear />
